fix the shifted avatars on profile page

--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -782,6 +782,9 @@ input[type="search"] {
 	vertical-align: top;
 	transition: opacity 500ms;
 }
+#user .avatar_container > div {
+	display: inline;
+}
 .avatar_container > :last-child {
 	opacity: 0;
 }
